# ConstrAI

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FRAMEWORK_GUIDE.md  LICENSE  MATHEMATICAL_COMPLIANCE.md  OWASP_MAPPING.md  README.md  SECURITY.md  SUMMARY.md  pyproject.toml  setup.py  test_arbiter.py
.github/workflows/: publish.yml  test-integrations.yml  test.yml
Benchmarks/: BENCHMARK_REPORT.md  constrai_benchmark.py
clampai/: __init__.py  active_hjb_barrier.py  api.py  formal.py  gradient_tracker.py  guards.py  hardening.py  invariants.py  inverse_algebra.py  jacobian_fusion.py  operadic_composition.py  orchestrator.py  reasoning.py  reference_monitor.py  safe_hover.py  saliency.py  server.py  testing.py  verification_log.py
clampai/adapters/: __init__.py  anthropic_adapter.py  autogen_adapter.py  crewai_adapter.py  fastapi_middleware.py  langchain_callback.py  langchain_tool.py  langgraph_adapter.py  mcp_server.py  metrics.py  openai_adapter.py  openclaw_adapter.py
constrai/: __init__.py  active_hjb_barrier.py  api.py  formal.py  gradient_tracker.py  guards.py  hardening.py  invariants.py  inverse_algebra.py  jacobian_fusion.py  operadic_composition.py  orchestrator.py  reasoning.py  reference_monitor.py  safe_hover.py  saliency.py  testing.py  verification_log.py
constrai/adapters/: __init__.py  anthropic_adapter.py  langchain_tool.py  mcp_server.py  metrics.py  openai_adapter.py  openclaw_adapter.py
docs/: API.md  ARCHITECTURE.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_AGENT_RFC.md  REFERENCE_MONITOR.md  STREAMING.md  THEOREMS.md  VULNERABILITIES.md
examples/: 01_hello_safety.py  02_budget_enforcement.py  03_invariants.py  04_orchestrator.py  05_safe_patterns.py  06_langgraph_agent.py  07_fastapi_middleware.py  claude_integration.py  email_safety.py  multi_agent_shared_kernel.py  reference_monitor_integration.py
safety_evaluation/: Evaluation_report.md  constrai_safety_evaluation.py  evaluation_results_raw.json
tests/: chaos_fuzzer.py  test_api.py  test_async_and_distributed.py  test_async_orchestrator.py  test_autogen_adapter.py  test_boundary_enforcement.py  test_clampai.py  test_composition.py  test_constrai.py  test_coverage_boost.py  test_crewai_adapter.py  test_fastapi_middleware.py  test_guards.py  test_hardening.py  test_integration.py  test_invariants_coverage.py  test_langchain_callback.py  test_langgraph_adapter.py  test_monte_carlo.py  test_new_invariants.py  test_openclaw_adapter.py  test_operadic_composition.py  test_orchestrator_coverage.py  test_reconcile_fn.py  test_reference_monitor_coverage.py  test_server.py  test_soft_gaps_fixed.py  test_testing_module.py
