[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constrai"
version = "0.4.0"
description = "Formal safety framework for AI agents with provable guarantees"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ambar", email = "ambar13@u.nus.edu" },
]
keywords = [
    "formal-methods",
    "ai-safety",
    "autonomous-agents",
    "execution-semantics",
    "invariants",
    "verification",
    "agent-framework",
    "state-machines",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
requires-python = ">=3.9"
# The safety kernel has zero runtime dependencies. It runs on the Python
# standard library alone; every external integration is an optional extra.
dependencies = []

[project.optional-dependencies]
anthropic  = ["anthropic>=0.20.0"]
openai     = ["openai>=1.0.0"]
openclaw   = []  # Requires: npm install -g openclaw@latest (no Python package)
langchain     = ["langchain>=0.2.0", "langchain-core>=0.3.0", "pydantic>=2.0"]
mcp           = ["mcp>=1.0.0"]
prometheus    = ["prometheus-client>=0.17.0"]
opentelemetry = ["opentelemetry-api>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage        = "https://github.com/Ambar-13/ConstrAI"
Repository      = "https://github.com/Ambar-13/ConstrAI"
"Bug Tracker"   = "https://github.com/Ambar-13/ConstrAI/issues"
Documentation   = "https://github.com/Ambar-13/ConstrAI/tree/main/docs"
Changelog       = "https://github.com/Ambar-13/ConstrAI/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/Ambar-13/ConstrAI/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["constrai*"]

[tool.setuptools.package-data]
constrai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "RUF"]
ignore = [
    "E501",   # long lines acceptable in theorem docs and math formulas
    "E701",
    "E702",
    "RUF001", # EN-DASH used intentionally in range notation: T1–T8, ⌊B₀/ε⌋
    "RUF002",
    "RUF003",
    "B007",
    "B011",
    "B023",
    "B904",
    "F841",
]

[tool.ruff.lint.per-file-ignores]
"constrai/__init__.py"          = ["F401"]
"constrai/adapters/__init__.py" = ["F401"]
"tests/*.py"    = ["F401", "F811"]
"examples/*.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["constrai"]

[tool.mypy]
python_version         = "3.9"
ignore_missing_imports = true
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = true
check_untyped_defs     = true
no_implicit_optional   = true
warn_unused_ignores    = true

[[tool.mypy.overrides]]
# These modules predate the strict-typing migration and are fully tested.
# Annotation coverage is tracked for incremental improvement.
module = [
    "constrai.reasoning",
    "constrai.reference_monitor",
    "constrai.orchestrator",
    "constrai.adapters.openai_adapter",
    "constrai.adapters.anthropic_adapter",
    "constrai.adapters.openclaw_adapter",
    "constrai.adapters.metrics",
    "constrai.adapters.langchain_tool",
    "constrai.operadic_composition",
    "constrai.jacobian_fusion",
]
ignore_errors = true

[tool.coverage.run]
# Adapter modules require optional third-party packages (anthropic, openai,
# langchain, mcp, prometheus-client, opentelemetry-api) that are not in [dev].
# They are covered by the integration CI (test-integrations.yml), not here.
omit = [
    "constrai/adapters/anthropic_adapter.py",
    "constrai/adapters/openclaw_adapter.py",
    "constrai/adapters/openai_adapter.py",
    "constrai/adapters/langchain_tool.py",
    "constrai/adapters/mcp_server.py",
    "constrai/adapters/metrics.py",
    "constrai/adapters/__init__.py",
]
