[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clampai"
version = "1.0.1"
description = "Safety guardrails for LLM agents — budget enforcement, invariants, and provable guarantees. Zero dependencies."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ambar", email = "ambar13@u.nus.edu" },
]
keywords = [
    "clampai",
    "llm safety",
    "llm guardrails",
    "llm agent",
    "llm security",
    "llm budget",
    "llm cost control",
    "llm rate limiting",
    "ai safety",
    "ai agent",
    "ai agent safety",
    "ai automation",
    "ai automation safety",
    "agent safety",
    "agent budget",
    "agent guardrails",
    "budget enforcement",
    "cost enforcement",
    "budget control",
    "safety invariants",
    "guardrails",
    "python guardrails",
    "autonomous agents",
    "agentic ai",
    "agentic ai security",
    "python safety framework",
    "action budget",
    "rate limiting",
    "openai safety",
    "openai guardrails",
    "langchain safety",
    "langchain guardrails",
    "langchain",
    "langgraph",
    "fastapi",
    "autogen",
    "crewai",
    "openclaw",
    "openai",
    "anthropic",
    "formal methods",
    "verification",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
# The safety kernel has zero runtime dependencies. It runs on the Python
# standard library alone; every external integration is an optional extra.
dependencies = []

[project.optional-dependencies]
anthropic  = ["anthropic>=0.20.0"]
openai     = ["openai>=1.0.0"]
openclaw   = []  # Requires: npm install -g openclaw@latest (no Python package)
langchain     = ["langchain>=0.2.0", "langchain-core>=0.3.0", "pydantic>=2.0"]
langgraph     = ["langgraph>=0.2"]
fastapi       = ["fastapi>=0.100.0", "starlette>=0.27.0"]
mcp           = ["mcp>=1.0.0"]
prometheus    = ["prometheus-client>=0.17.0"]
opentelemetry = ["opentelemetry-api>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage        = "https://github.com/Ambar-13/ClampAI"
Repository      = "https://github.com/Ambar-13/ClampAI"
"Bug Tracker"   = "https://github.com/Ambar-13/ClampAI/issues"
Documentation   = "https://github.com/Ambar-13/ClampAI/tree/main/docs"
Changelog       = "https://github.com/Ambar-13/ClampAI/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/Ambar-13/ClampAI/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["clampai*"]

[tool.setuptools.package-data]
clampai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "RUF"]
ignore = [
    "E501",   # long lines acceptable in theorem docs and math formulas
    "E701",
    "E702",
    "RUF001", # EN-DASH used intentionally in range notation: T1–T8, ⌊B₀/ε⌋
    "RUF002",
    "RUF003",
    "B007",
    "B011",
    "B023",
    "B904",
    "F841",
]

[tool.ruff.lint.per-file-ignores]
"clampai/__init__.py"          = ["F401"]
"clampai/adapters/__init__.py" = ["F401"]
"tests/*.py"    = ["F401", "F811"]
"examples/*.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["clampai"]

[tool.mypy]
python_version         = "3.9"
ignore_missing_imports = true
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = true
check_untyped_defs     = true
no_implicit_optional   = true
warn_unused_ignores    = true

[[tool.mypy.overrides]]
# These modules predate the strict-typing migration and are fully tested.
# Annotation coverage is tracked for incremental improvement.
module = [
    "clampai.reasoning",
    "clampai.reference_monitor",
    "clampai.orchestrator",
    "clampai.adapters.anthropic_adapter",
    "clampai.adapters.fastapi_middleware",
    "clampai.adapters.autogen_adapter",
    "clampai.adapters.crewai_adapter",
    "clampai.adapters.langchain_callback",
    "clampai.adapters.langchain_tool",
    "clampai.adapters.langgraph_adapter",
    "clampai.adapters.metrics",
    "clampai.adapters.openai_adapter",
    "clampai.adapters.openclaw_adapter",
    "clampai.operadic_composition",
    "clampai.jacobian_fusion",
    "clampai.server",
]
ignore_errors = true

[tool.coverage.run]
# Adapter modules require optional third-party packages (anthropic, openai,
# langchain, mcp, prometheus-client, opentelemetry-api) that are not in [dev].
# They are covered by the integration CI (test-integrations.yml), not here.
omit = [
    "clampai/adapters/anthropic_adapter.py",
    "clampai/adapters/autogen_adapter.py",
    "clampai/adapters/crewai_adapter.py",
    "clampai/adapters/langchain_callback.py",
    "clampai/adapters/langchain_tool.py",
    "clampai/adapters/mcp_server.py",
    "clampai/adapters/metrics.py",
    "clampai/adapters/openclaw_adapter.py",
    "clampai/adapters/openai_adapter.py",
    "clampai/adapters/__init__.py",
    "clampai/server.py",
]
